infra/k8s-dev/account-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: account
  template:
    metadata:
      labels:
        app: account
    spec:
      containers:
        - name: account
          image: yahiaeltai/account
          resources:
            requests:
              cpu: 100m
              memory: 384Mi
            limits:
              memory: 384Mi
              cpu: 300m
---
apiVersion: v1
kind: Service
metadata:
  name: ms-account
spec:
  selector:
    app: account
  ports:
    - name: account
      port: 3000
      targetPort: 3000
